creer la page rencontre

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">Accueil</a></li>
+            <li><a href="/rencontre">Rencontre </a></li>
+            <li>Société</li>
+            <li>Empowerment</li>
+        </ul>
+    </nav>
     {{ content }}
 </body>
 
